# midiproc

./: .gitignore  CMakeLists.txt
buildandroid_aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  midiproc.pc  midiprocConfig.cmake  test
buildandroid_armv7/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  test
buildandroid_i686/: CMakeCache.txt  Makefile  cmake_install.cmake  midiprocConfigVersion.cmake  test
buildandroid_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  test
cmake/: Config.cmake.in  Config.pc.in
compat/: common_compat.h  os_compat.c  os_compat.h  print_compat.h  string_compat.h
src/: MIDIContainer.cpp  MIDIContainer.h  MIDIProcessor.cpp  MIDIProcessor.h  MIDIProcessorGMF.cpp  MIDIProcessorHMI.cpp  MIDIProcessorHMP.cpp  MIDIProcessorLDS.cpp  MIDIProcessorMDS.cpp  MIDIProcessorMUS.cpp  MIDIProcessorRCP.cpp  MIDIProcessorRIFF.cpp  MIDIProcessorSMF.cpp  MIDIProcessorXMI.cpp  Range.h  midiproc.cpp  midiproc.h
test/: test_midiproc.c  test_sdl.c
