cmake_minimum_required(VERSION 3.10)

project(midiproc VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 11)

set(MIDIPROC_TARGET_NAME ${PROJECT_NAME})

file(GLOB SOURCES "src/*.cpp" "compat/os_compat.c")

add_library(${MIDIPROC_TARGET_NAME} ${SOURCES})
target_include_directories(${MIDIPROC_TARGET_NAME} PRIVATE compat)

add_executable(test test/test_midiproc.c)
target_include_directories(test PRIVATE src)

target_link_libraries(test ${MIDIPROC_TARGET_NAME})


#check if CMAKE_INSTALL_LIBDIR is defined
if(NOT DEFINED CMAKE_INSTALL_LIBDIR)
    set(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
endif()

#check if CMAKE_INSTALL_INCLUDEDIR is defined
if(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)
    set(CMAKE_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
endif()


set(MIDIPROC_TARGETS_EXPORT_NAME       "${PROJECT_NAME}-targets")
set(MIDIPROC_CONFIG_INSTALL_DIR        "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE INTERNAL "")
set(MIDIPROC_INCLUDE_INSTALL_DIR       "${CMAKE_INSTALL_INCLUDEDIR}/midiproc" CACHE INTERNAL "")
set(MIDIPROC_TARGETS_EXPORT_NAME       "${PROJECT_NAME}-targets")
set(MIDIPROC_CMAKE_CONFIG_TEMPLATE     "cmake/Config.cmake.in")
set(MIDIPROC_CMAKE_CONFIG_DIR          "${CMAKE_CURRENT_BINARY_DIR}")
set(MIDIPROC_CMAKE_VERSION_CONFIG_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
set(MIDIPROC_CMAKE_PROJECT_CONFIG_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Config.cmake")
set(MIDIPROC_CMAKE_PROJECT_TARGETS_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}-targets.cmake")

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
	${MIDIPROC_CMAKE_VERSION_CONFIG_FILE} COMPATIBILITY SameMinorVersion
)
configure_package_config_file(
	${MIDIPROC_CMAKE_CONFIG_TEMPLATE}
	"${MIDIPROC_CMAKE_PROJECT_CONFIG_FILE}"
	INSTALL_DESTINATION ${MIDIPROC_CONFIG_INSTALL_DIR}
)
# configure_package_config_file(midiprocConfig.cmake.in midiprocConfig.cmake INSTALL_DESTINATION share/midiproc)
# add install target
install(
	TARGETS                  "${MIDIPROC_TARGET_NAME}"
	EXPORT                   "${MIDIPROC_TARGETS_EXPORT_NAME}"
	ARCHIVE DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
	LIBRARY DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
	RUNTIME DESTINATION      "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION     "${MIDIPROC_INCLUDE_INSTALL_DIR}"
)
install(FILES src/midiproc.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/MIDIContainer.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/MIDIProcessor.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/Range.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")

message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
#CMAKE_INSTALL_INCLUDEDIR
message(STATUS "CMAKE_INSTALL_INCLUDEDIR: ${CMAKE_INSTALL_INCLUDEDIR}")
message(STATUS "MIDIPROC_CONFIG_INSTALL_DIR: ${MIDIPROC_CONFIG_INSTALL_DIR}")
message(STATUS "MIDIPROC_INCLUDE_INSTALL_DIR: ${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(
	EXPORT "${MIDIPROC_TARGETS_EXPORT_NAME}"
	NAMESPACE "${MIDIPROC_TARGET_NAME}::"
	DESTINATION "${MIDIPROC_CONFIG_INSTALL_DIR}"
)

install(FILES ${MIDIPROC_CMAKE_VERSION_CONFIG_FILE} ${MIDIPROC_CMAKE_PROJECT_CONFIG_FILE}
DESTINATION ${MIDIPROC_CONFIG_INSTALL_DIR})

