cmake_minimum_required(VERSION 3.3)

project(midiproc VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 11)

set(MIDIPROC_TARGET_NAME ${PROJECT_NAME})
set(MIDIPROC_TARGET_NAME_SHARED ${PROJECT_NAME}_shared)

file(GLOB SOURCES "src/*.cpp" "compat/os_compat.c")

add_library(${MIDIPROC_TARGET_NAME} ${SOURCES})

option(BUILD_SHARED "Build shared library" OFF)
if (BUILD_SHARED)
    add_library(${MIDIPROC_TARGET_NAME_SHARED} SHARED ${SOURCES})
endif()

target_include_directories(${MIDIPROC_TARGET_NAME} PRIVATE compat)

add_executable(test_midiproc test/test_midiproc.c)
target_include_directories(test_midiproc PRIVATE src)


option(BUILD_SDL_TEST "Build the SDL test" OFF)
if (BUILD_SDL_TEST)
    find_package(SDL2 CONFIG REQUIRED)
    find_package(SDL2_mixer_ext CONFIG REQUIRED)
    add_executable(sdl_test test/test_sdl.c)
    target_include_directories(sdl_test PUBLIC src)
    target_include_directories(sdl_test PUBLIC compat)

    target_link_libraries(sdl_test
         PUBLIC
         SDL2 SDL2main
     )
    target_link_libraries(sdl_test PUBLIC SDL2_mixer_ext)
    target_link_libraries(sdl_test PUBLIC ${MIDIPROC_TARGET_NAME})
endif()


target_link_libraries(test_midiproc ${MIDIPROC_TARGET_NAME})


#check if CMAKE_INSTALL_LIBDIR is defined
if(NOT DEFINED CMAKE_INSTALL_LIBDIR)
    set(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
endif()

#check if CMAKE_INSTALL_INCLUDEDIR is defined
if(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)
    set(CMAKE_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
endif()

#check if the share directory is defined
if(NOT DEFINED CMAKE_INSTALL_SHAREDIR)
    set(CMAKE_INSTALL_SHAREDIR "${CMAKE_INSTALL_PREFIX}/share")
endif()


set(MIDIPROC_TARGETS_EXPORT_NAME       "${PROJECT_NAME}-targets")
set(MIDIPROC_CONFIG_INSTALL_DIR        "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE INTERNAL "")
set(MIDIPROC_PKGCONFIG_INSTALL_DIR     "${CMAKE_INSTALL_LIBDIR}/pkgconfig" CACHE INTERNAL "")
set(MIDIPROC_INCLUDE_INSTALL_DIR       "${CMAKE_INSTALL_INCLUDEDIR}/midiproc" CACHE INTERNAL "")
set(MIDIPROC_SHARE_INSTALL_DIR         "${CMAKE_INSTALL_SHAREDIR}/midiproc" CACHE INTERNAL "")
set(MIDIPROC_TARGETS_EXPORT_NAME       "${PROJECT_NAME}-targets")
set(MIDIPROC_CMAKE_CONFIG_TEMPLATE     "cmake/Config.cmake.in")
set(MIDIPROC_CMAKE_PKGCONFIG_TEMPLATE  "cmake/Config.pc.in")
set(MIDIPROC_CMAKE_CONFIG_DIR          "${CMAKE_CURRENT_BINARY_DIR}")
set(MIDIPROC_CMAKE_VERSION_CONFIG_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
set(MIDIPROC_CMAKE_PROJECT_CONFIG_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Config.cmake")
set(MIDIPROC_CMAKE_PROJECT_TARGETS_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${PROJECT_NAME}-targets.cmake")
set(MIDIPROC_CMAKE_PROJECT_PKGCONFIG_FILE "${MIDIPROC_CMAKE_CONFIG_DIR}/${MIDIPROC_TARGET_NAME}.pc")


include(CMakePackageConfigHelpers)
write_basic_package_version_file(
	${MIDIPROC_CMAKE_VERSION_CONFIG_FILE} COMPATIBILITY SameMajorVersion
)
configure_package_config_file(
	${MIDIPROC_CMAKE_CONFIG_TEMPLATE}
	"${MIDIPROC_CMAKE_PROJECT_CONFIG_FILE}"
	INSTALL_DESTINATION ${MIDIPROC_CONFIG_INSTALL_DIR}
)

#configure the Config.pc.in
configure_file(${MIDIPROC_CMAKE_PKGCONFIG_TEMPLATE} "${MIDIPROC_CMAKE_PROJECT_PKGCONFIG_FILE}" @ONLY)

# configure_package_config_file(midiprocConfig.cmake.in midiprocConfig.cmake INSTALL_DESTINATION share/midiproc)
# add install target
install(
	TARGETS                  "${MIDIPROC_TARGET_NAME}"
	EXPORT                   "${MIDIPROC_TARGETS_EXPORT_NAME}"
	ARCHIVE DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
	LIBRARY DESTINATION      "${CMAKE_INSTALL_LIBDIR}"
	RUNTIME DESTINATION      "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION     "${MIDIPROC_INCLUDE_INSTALL_DIR}"
)
install(FILES src/midiproc.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/MIDIContainer.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/MIDIProcessor.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(FILES src/Range.h DESTINATION "${MIDIPROC_INCLUDE_INSTALL_DIR}")

message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
#CMAKE_INSTALL_INCLUDEDIR
message(STATUS "CMAKE_INSTALL_INCLUDEDIR: ${CMAKE_INSTALL_INCLUDEDIR}")
message(STATUS "MIDIPROC_CONFIG_INSTALL_DIR: ${MIDIPROC_CONFIG_INSTALL_DIR}")
message(STATUS "MIDIPROC_INCLUDE_INSTALL_DIR: ${MIDIPROC_INCLUDE_INSTALL_DIR}")
install(
	EXPORT "${MIDIPROC_TARGETS_EXPORT_NAME}"
	NAMESPACE "${MIDIPROC_TARGET_NAME}::"
	DESTINATION "${MIDIPROC_CONFIG_INSTALL_DIR}"
)

install(FILES ${MIDIPROC_CMAKE_VERSION_CONFIG_FILE} ${MIDIPROC_CMAKE_PROJECT_CONFIG_FILE}
DESTINATION ${MIDIPROC_CONFIG_INSTALL_DIR})

# install the pkg-config file
install(FILES ${MIDIPROC_CMAKE_PROJECT_PKGCONFIG_FILE} DESTINATION "${MIDIPROC_PKGCONFIG_INSTALL_DIR}")

# install the license into shared
install(FILES LICENSE DESTINATION "${MIDIPROC_SHARE_INSTALL_DIR}" RENAME copyright)
